# hephaestus

./: .coverage  .env.production.example  =5.3.0  CLAUDE.md  PESQUISA.md  PLAN.md  README.md  REVENUE_SYSTEM.md  autonomous_expansion_strategy.py  continuous_rsi_runner.py  coverage.xml  dashboard.html  debug_expansion_failures.py  demo_meta_learning.py  demo_real_rsi.py  demo_results.json  demonstrate_auto_fix.py  deploy_revenue_system.py  episodic_memory.db  evolution_analysis.py  example_usage.py  meta_learning_demo_results.json  mlflow.db  model_registry.db  monitor_rsi.py  pivot_analysis.py  practical_rsi_applications.md  procedural_memory.pkl  pyproject.toml  real_rsi_runner.py  requirements.txt  rsi_continuous_state.json  start_revenue_generation.py  test_architecture_evolution.py  test_auto_fix_complete.py  test_auto_fix_with_error.py  test_coevolution_integration.py  test_email_automation.py  test_email_quick.py  test_expansion_fix.py  (+13 more)
agent_evolution/: agent_coevolution_agent_b38d9c52.json  agent_coevolution_agent_ec383a10.json
config/: base_config.py  development.yml  feature_flags.json  production.yml  testing.yml
data/: README.md  test_production.db
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  SECURITY.md
examples/: advanced_rsi_demo.py  complete_rsi_demo.py
gap_analysis/: gaps_20250712_144254.json  gaps_20250712_144311.json  gaps_20250713_112905.json  gaps_20250713_113022.json  gaps_20250713_113123.json  gaps_20250713_224551.json  gaps_20250713_224616.json  gaps_20250713_225739.json  gaps_20250713_231406.json  gaps_20250713_232024.json  gaps_20250713_232406.json  gaps_20250713_232909.json  gaps_20250713_232936.json  gaps_20250713_233407.json  gaps_20250713_234407.json  gaps_20250713_235407.json  gaps_20250714_000407.json  gaps_20250714_001407.json  gaps_20250714_002407.json  gaps_20250714_003407.json  gaps_20250714_004407.json  gaps_20250714_005408.json  gaps_20250714_010408.json  gaps_20250714_011407.json  gaps_20250714_011408.json  gaps_20250714_012408.json  gaps_20250714_013408.json  gaps_20250714_014408.json  gaps_20250714_015408.json  gaps_20250714_020409.json  gaps_20250714_021407.json  gaps_20250714_021409.json  gaps_20250714_022409.json  gaps_20250714_023409.json  gaps_20250714_024409.json  gaps_20250714_025409.json  gaps_20250714_030409.json  gaps_20250714_031407.json  gaps_20250714_031409.json  gaps_20250714_032410.json  (+26 more)
hephaestus_rsi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
logs/: rl_hyperparameter_optimization.log.monitor.csv
memory-bank/: activeContext.md  progress.md  projectbrief.md  rsi_integration_prompt.md  systemPatterns.md  techContext.md
meta_learning_results/: mml_cycle_20250712_144311.json  mml_cycle_20250713_224551.json  mml_cycle_20250713_224616.json  mml_cycle_20250713_225739.json  mml_cycle_20250713_231406.json  mml_cycle_20250713_231746.json  mml_cycle_20250713_232024.json  mml_cycle_20250713_232242.json  mml_cycle_20250713_233259.json  mml_cycle_20250713_234407.json  mml_cycle_20250714_001407.json  mml_cycle_20250714_004407.json  mml_cycle_20250714_011408.json  mml_cycle_20250714_014408.json  mml_cycle_20250714_021409.json  mml_cycle_20250714_024409.json  mml_cycle_20250714_031409.json  mml_cycle_20250714_034410.json  mml_cycle_20250714_041410.json  mml_cycle_20250714_044411.json  mml_cycle_20250714_051411.json  mml_cycle_20250714_054411.json  mml_cycle_20250714_235257.json  mml_cycle_20250715_000109.json  mml_cycle_20250715_001753.json  mml_cycle_20250715_003500.json  mml_cycle_20250715_003949.json  mml_cycle_20250716_194620.json  mml_cycle_20250716_201824.json  mml_state.pkl
rsi_learning_objectives/: auto_capability_development.json  interface_creation.json  learning_progress.json
rsi_pipeline/: execution_0028f228-1370-45f7-897c-7254404afd63.json  execution_0117180e-c643-4f94-bf94-0c4e1ed37c59.json  execution_013fe13c-b625-4e62-bf5b-e2aba127b90f.json  execution_019573d0-d22c-48b1-9bab-6f8a64b54b0b.json  execution_02bb26c2-5da5-403e-9ca3-5e723d063e64.json  execution_08e4fa22-ae49-4fb0-a130-4b22afc69dc0.json  execution_0ae3a3b7-fb9c-4c28-9f59-fcbfdfd9e8c5.json  execution_0c83bb92-a39e-44fa-8652-c6e4d1f6eb8a.json  execution_0d5a9d76-abb6-4f10-8254-39eee75f62a8.json  execution_0dcb5d0e-4c25-483e-bf33-0d31907b2e02.json  execution_0e461e48-6550-47f7-9d4f-12f0c8e21064.json  execution_0ef877e1-f47d-480c-ac51-4ffedd06a8c7.json  execution_0f86f091-ecac-42a2-b00f-207de6e4b5a0.json  execution_10ad4909-3972-452b-bd5a-47303155f688.json  execution_126765eb-e20d-41ed-8529-253a641651df.json  execution_1550f9be-4c08-45d7-b592-ae4a16910ef9.json  execution_16d5acde-e2bf-494a-90c6-3fa7a7a46b08.json  execution_174a0ac8-9fc1-4100-be64-e190b959c3cc.json  execution_1a77c336-305e-42e4-a253-2956e586e2c9.json  execution_1c2c8c74-06e6-4c98-a258-c63538af0f81.json  execution_1d231cd6-824f-4fa9-8e0f-44e1ccd82bbd.json  execution_206dc86a-4dec-4779-a668-2043f6478746.json  execution_240925d3-593f-4b74-837a-6e706617cce0.json  execution_2841a29f-2db3-4af7-af8c-b96fcde4ec6e.json  execution_28e25f5e-119b-40fa-b640-b11f8226899e.json  execution_299c2094-e4d3-43ca-a02c-57fbd91c218a.json  execution_2e3b0454-0ae4-4050-a60e-11dd69ac228e.json  execution_331fccef-cfb9-4c9f-9bc6-58fd5e449ba1.json  execution_36453885-bb24-4c7b-ac38-1d374ac75ac8.json  execution_3f3b1a44-890c-4845-bc71-d7f77be05d9d.json  execution_41a400b5-af0c-4604-a2ef-420b078342ac.json  execution_4872e469-f1d9-44bf-9a8d-333f3076ebfa.json  execution_4a8e15c7-bda9-4385-822c-af8993a97ab5.json  execution_4baf9a05-cf68-49cd-bcb8-ce16193df6dd.json  execution_4c2f4a3b-ed17-4361-8122-744c238a6f9c.json  execution_4dce3c3e-e893-4185-b78a-ec3c8aeb312e.json  execution_4f152340-aab8-4da4-b5a5-967e83ca302e.json  execution_54e8245b-8f78-4b17-adbb-ac1544cbb70a.json  execution_5619b948-5dc0-4d5e-a5e9-5af035d43035.json  execution_570e61b6-07a8-4e63-a6fc-9ca82b8ee6dd.json  (+89 more)
rsi_seed_v0.1/: governance.py  main.py  seed_ai.py
rsi_seed_v0.2/: governance.py  main.py  seed_ai_v0.2.py
safety_checkpoints/: checkpoint_1752263205075.json  checkpoint_1752263206187.json  (+92 more)
src/: main.py
(+134 files in other folders)
